done 80% of auth successfully